A cheap fix for the overlapping text problem (for now)
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40810

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -729,10 +729,10 @@ ul.ui-autocomplete .ui-menu-item a span.playlist {
     right: 66px;
 }
 .exercise-badge.single-exercise .related-content {
-    bottom: 7px;
+    top: 30px;
     left: 70px;
     position: absolute;
-    width: 520px;
+    width: 535px;
 }
     .exercise-badge.single-exercise .related-content .related-content-title {
         float: left;
